tests-integration/fixtures/checking/206_builtin_fail/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Proxy :: forall (k :: Type) (a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
failBasic ::
  forall (a :: Type). Fail (Text "This operation is not allowed") => (a :: Type) -> (a :: Type)
useFailBasic :: Int
failComplex ::
  forall (t8 :: Type) (a :: (t8 :: Type)).
    Fail
      (Above (Text "Error:") (Beside (Text "Type ") (Quote @(t8 :: Type) (a :: (t8 :: Type))))) =>
    Proxy @(t8 :: Type) (a :: (t8 :: Type)) -> Proxy @(t8 :: Type) (a :: (t8 :: Type))
useFailComplex :: Proxy @Type String

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Data
Proxy
  Quantified = :0
  Kind = :1


Roles
Proxy = [Phantom]

Diagnostics
error[CustomFailure]: This operation is not allowed
  --> 11:1..11:20
   |
11 | useFailBasic :: Int
   | ^~~~~~~~~~~~~~~~~~~
error[CustomFailure]: Error:
Type String
  --> 17:1..17:31
   |
17 | useFailComplex :: Proxy String
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
